--- a/Result.html
+++ b/Result.html
@@ -41,7 +41,6 @@
     }
 
     .red h1 {
-      color: white;
       text-shadow: 
         0 0 5px #ff0000,
         0 0 10px #ff0000,
@@ -49,8 +48,12 @@
         0 0 40px #ff0000;
     }
 
-    .green h1, .blue h1 {
-      text-shadow: 0 0 8px #fff;
+    .green h1 {
+      text-shadow: 0 0 8px #00ff88;
+    }
+
+    .blue h1 {
+      text-shadow: 0 0 8px #00ccff;
     }
 
     p {
