--- a/Index.html
+++ b/Index.html
@@ -96,3 +96,33 @@
   <script src="script.js"></script>
 </body>
 </html>
+<script>
+  document.querySelector("form").addEventListener("submit", function(event) {
+    event.preventDefault();
+
+    const q3 = document.querySelector('input[name="q3"]:checked');
+    const totalQuestions = document.querySelectorAll("fieldset").length;
+    const answered = document.querySelectorAll("input[type=radio]:checked").length;
+
+    if (answered < totalQuestions) {
+      alert("Complete questionnaire to see results!");
+      return;
+    }
+
+    let room = "";
+
+    if (q3 && q3.value.includes("whipped cream")) {
+      room = "blue";
+    } else if (q3 && q3.value.includes("sex toys")) {
+      room = "green";
+    } else if (q3 && q3.value.includes("BDSM")) {
+      room = "red";
+    }
+
+    if (room) {
+      window.location.href = `result.html?room=${room}&show=yes`;
+    } else {
+      alert("Complete questionnaire to see results!");
+    }
+  });
+</script>
