--- a/Result.html
+++ b/Result.html
@@ -1,91 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Results</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Result</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      padding: 20px;
-      color: white;
       margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    .title {
+      font-size: 2.6rem;
+      font-weight: bold;
+      font-style: italic;
+      line-height: 1.2;
+      margin-bottom: 25px;
+    }
+
+    .subtitle {
+      font-size: 1.2rem;
+      font-weight: 400;
     }
 
     .red {
       background-color: #950606;
+      text-shadow: 0 0 5px #ff4d4d, 0 0 10px #ff4d4d;
     }
 
     .green {
       background-color: #06954E;
+      text-shadow: 0 0 5px #6fffca, 0 0 10px #6fffca;
     }
 
     .blue {
       background-color: #064D95;
-    }
-
-    h1 {
-      font-family: 'Poppins', sans-serif;
-      font-style: italic;
-      font-size: 2.6rem;
-      line-height: 1.2;
-      margin-bottom: 20px;
-      white-space: pre-line;
-    }
-
-    .red h1 {
-      text-shadow: 
-        0 0 5px #ff0000,
-        0 0 10px #ff0000,
-        0 0 20px #ff0000,
-        0 0 40px #ff0000;
-    }
-
-    .green h1 {
-      text-shadow: 0 0 8px #00ff88;
-    }
-
-    .blue h1 {
-      text-shadow: 0 0 8px #00ccff;
-    }
-
-    p {
-      font-size: 1.3rem;
-      max-width: 600px;
-      font-family: 'Montserrat', sans-serif;
+      text-shadow: 0 0 5px #64aaff, 0 0 10px #64aaff;
     }
   </style>
 </head>
-<body class="">
-  <h1 id="roomTitle"></h1>
-  <p id="extraText"></p>
+<body id="resultBody">
+  <div class="title" id="resultText">Meet your type<br>in our<br>ROOM!</div>
+  <div class="subtitle">Audition for our reality dating show by participating in our speed-dating game, The Pickup Line!</div>
 
   <script>
     const params = new URLSearchParams(window.location.search);
     const room = params.get("room");
-    const show = params.get("show");
+    const resultText = document.getElementById("resultText");
+    const resultBody = document.getElementById("resultBody");
 
-    const titleMap = {
-      red: "Meet your type\nin the RED ROOM",
-      green: "Meet your type\nin the GREEN ROOM",
-      blue: "Meet your type\nin the BLUE ROOM"
-    };
-
-    const body = document.body;
-    body.classList.add(room);
-
-    document.getElementById("roomTitle").innerText = titleMap[room] || "";
-
-    if (show === "yes") {
-      document.getElementById("extraText").innerHTML = 
-        'Audition for our reality dating show by participating in our speed-dating game, <em>The Pickup Line!</em>';
+    if (room === "red") {
+      resultText.innerHTML = "Meet your type<br>in our<br>RED ROOM!";
+      resultBody.classList.add("red");
+    } else if (room === "green") {
+      resultText.innerHTML = "Meet your type<br>in our<br>GREEN ROOM!";
+      resultBody.classList.add("green");
+    } else if (room === "blue") {
+      resultText.innerHTML = "Meet your type<br>in our<br>BLUE ROOM!";
+      resultBody.classList.add("blue");
     }
   </script>
 </body>
