--- a/Result.html
+++ b/Result.html
@@ -25,6 +25,13 @@
     .subtitle {
       font-size: 1.2rem;
       font-weight: 400;
+      margin-bottom: 30px;
+    }
+
+    .bonus {
+      font-size: 1.1rem;
+      margin-top: 20px;
+      color: #ffccff;
     }
 
     .red {
@@ -45,13 +52,22 @@
 </head>
 <body id="resultBody">
   <div class="title" id="resultText">Meet your type<br>in our<br>ROOM!</div>
-  <div class="subtitle">Audition for our reality dating show by participating in our speed-dating game, The Pickup Line!</div>
+  <div class="subtitle">
+    Audition for our reality dating show by participating in our speed-dating game, The Pickup Line!
+  </div>
+  <div class="bonus" id="bonusText" style="display: none;">
+    Visit our chocolate shop and use the password: <strong>Sweet Spot!</strong><br>
+    to gain entry to our speakeasy, <strong>Sugar Daddy’s</strong>
+  </div>
 
   <script>
     const params = new URLSearchParams(window.location.search);
     const room = params.get("room");
+    const sugar = params.get("sugar");
+
     const resultText = document.getElementById("resultText");
     const resultBody = document.getElementById("resultBody");
+    const bonusText = document.getElementById("bonusText");
 
     if (room === "red") {
       resultText.innerHTML = "Meet your type<br>in our<br>RED ROOM!";
@@ -62,6 +78,10 @@
     } else if (room === "blue") {
       resultText.innerHTML = "Meet your type<br>in our<br>BLUE ROOM!";
       resultBody.classList.add("blue");
+    }
+
+    if (sugar === "true") {
+      bonusText.style.display = "block";
     }
   </script>
 </body>
