--- a/Index.html
+++ b/Index.html
@@ -3,20 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dating App Quiz</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>The 1st In-Person Dating App</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <div class="gradient-border">
-      <h1 class="title"><em>The 1st<br>In-Person<br>Dating App</em></h1>
-      <div class="subheader">
-        <p>10 questions<br>100% private<br><span class="scandalous">1000X more <span class="scan-dalous">SCAN-DALOUS</span></span><br>than swiping</p>
-      </div>
-      <form id="quiz-form">
+      <h1 class="title">The 1st<br>In-Person<br>Dating App</h1>
+      <p class="subheader">
+        10 questions<br>
+        100% private<br>
+        1000X more <span class="scan-dalous">SCAN-DALOUS</span><br>
+        than swiping
+      </p>
+
+      <form id="quizForm">
         <div class="question">
           <p><strong>1… Do you prefer to make the first move or get approached?</strong></p>
-          <label><input type="radio" name="q1" value="make"> I want to make the first move</label>
+          <label><input type="radio" name="q1" value="first"> I want to make the first move</label>
           <label><input type="radio" name="q1" value="approached"> I want to get approached</label>
         </div>
 
@@ -37,7 +41,7 @@
         <div class="question">
           <p><strong>4… Are you comfortable with PDA?</strong></p>
           <label><input type="radio" name="q4" value="yes"> Yes</label>
-          <label><input type="radio" name="q4" value="little"> Only a little</label>
+          <label><input type="radio" name="q4" value="some"> Only a little</label>
           <label><input type="radio" name="q4" value="no"> No</label>
         </div>
 
@@ -50,9 +54,9 @@
 
         <div class="question">
           <p><strong>6… Do you like to be the center of attention?</strong></p>
-          <label><input type="radio" name="q6" value="flaunt"> Yes, like they say, “if you got it, flaunt it.”</label>
-          <label><input type="radio" name="q6" value="partner"> Yes, but I prefer to let my partner shine</label>
-          <label><input type="radio" name="q6" value="no-spotlight"> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label>
+          <label><input type="radio" name="q6" value="yes"> Yes, like they say, “if you got it, flaunt it.”</label>
+          <label><input type="radio" name="q6" value="yespartner"> Yes, but I prefer to let my partner shine</label>
+          <label><input type="radio" name="q6" value="nopartner"> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label>
           <label><input type="radio" name="q6" value="blend"> No, I’d rather my partner and I blend in</label>
         </div>
 
@@ -61,7 +65,7 @@
           <label><input type="radio" name="q7" value="no"> No I’d like my partner to be mine & only mine</label>
           <label><input type="radio" name="q7" value="maybe"> Maybe, I’d consider it</label>
           <label><input type="radio" name="q7" value="yeah"> Yeah it’d be fun</label>
-          <label><input type="radio" name="q7" value="hell"> Hell yeah! Why stop at 3? The more the merrier</label>
+          <label><input type="radio" name="q7" value="hellyeah"> Hell yeah! Why stop at 3? The more the merrier</label>
         </div>
 
         <div class="question">
@@ -73,21 +77,21 @@
         <div class="question">
           <p><strong>9… Who do you want to wear the pants?</strong></p>
           <label><input type="radio" name="q9" value="control"> I like to be in control</label>
-          <label><input type="radio" name="q9" value="partner"> I want my partner to take control</label>
-          <label><input type="radio" name="q9" value="street-dom"> I’m dominant in the streets & submissive in the sheets</label>
-          <label><input type="radio" name="q9" value="street-sub"> I’m submissive in the streets & dominant in the sheets</label>
-          <label><input type="radio" name="q9" value="switch"> I like to switch it up</label>
+          <label><input type="radio" name="q9" value="partnercontrol"> I want my partner to take control</label>
+          <label><input type="radio" name="q9" value="switch1"> I’m dominant in the streets & submissive in the sheets</label>
+          <label><input type="radio" name="q9" value="switch2"> I’m submissive in the streets & dominant in the sheets</label>
+          <label><input type="radio" name="q9" value="both"> I like to switch it up</label>
         </div>
 
         <div class="question">
-          <p><strong>10… Feeling frisky? Want to audition to be a star in our reality dating show? Once you’re in, you won’t want to pull out.</strong></p>
+          <p><strong>10… Feeling frisky? Want to audition to be a star in our reality dating show?</strong></p>
           <label><input type="radio" name="q10" value="yes"> Let’s do it! I’m ready for my close-up</label>
-          <label><input type="radio" name="q10" value="pass"> Tempting, but I’ll pass this time</label>
+          <label><input type="radio" name="q10" value="no"> Tempting, but I’ll pass this time</label>
         </div>
 
         <button type="submit" class="submit-button">Meet your type now!</button>
+        <p id="alert" class="alert-message"></p>
       </form>
-      <p id="alert" class="alert-message"></p>
     </div>
   </div>
   <script src="script.js"></script>
