--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="center">
-          <button class="submit-btn" type="submit">See My Results</button>
+          <button class="submit-btn" type="submit">Meet Your Type Now!</button>
         </div>
       </form>
     </div>
