--- a/Index.html
+++ b/Index.html
@@ -21,41 +21,41 @@
 
       <form id="quizForm">
         <div class="question">
-          <p>1… Do you prefer to make the first move or get approached?</p>
+          <p>1. Do you prefer to make the first move or get approached?</p>
           <label><input type="radio" name="q1" value="first"> I want to make the first move</label>
           <label><input type="radio" name="q1" value="get"> I want to get approached</label>
         </div>
 
         <div class="question">
-          <p>2… Are you looking for love or a good time?</p>
+          <p>2. Are you looking for love or a good time?</p>
           <label><input type="radio" name="q2" value="love"> Love</label>
           <label><input type="radio" name="q2" value="either"> Either one, I like to let things evolve naturally</label>
           <label><input type="radio" name="q2" value="fun"> A good time</label>
         </div>
 
         <div class="question">
-          <p>3… Which vibe turns you on the most</p>
+          <p>3. Which vibe turns you on the most</p>
           <label><input type="radio" name="q3" value="whipped"> Passionate sex, sensual massage, pillow talk, cuddling, new positions with a partner, playing with whipped cream</label>
           <label><input type="radio" name="q3" value="toys"> One-night stands, giving/receiving a striptease or lap dance, watching porn together, sexy role-play, experimenting with new sex toys</label>
           <label><input type="radio" name="q3" value="bdsm"> Power exchange, rough sex, spanking, BDSM, naughty mind games, filthy dirty talk</label>
         </div>
 
         <div class="question">
-          <p>4… Are you comfortable with PDA?</p>
+          <p>4. Are you comfortable with PDA?</p>
           <label><input type="radio" name="q4" value="yes"> Yes</label>
           <label><input type="radio" name="q4" value="little"> Only a little</label>
           <label><input type="radio" name="q4" value="no"> No</label>
         </div>
 
         <div class="question">
-          <p>5… Are you looking for a sugar daddy/momma?</p>
+          <p>5. Are you looking for a sugar daddy/momma?</p>
           <label><input type="radio" name="q5" value="yes"> Yes</label>
           <label><input type="radio" name="q5" value="no"> No thank you</label>
           <label><input type="radio" name="q5" value="iam"> Are you kidding? I am the sugar daddy/momma!</label>
         </div>
 
         <div class="question">
-          <p>6… Do you like to be the center of attention?</p>
+          <p>6. Do you like to be the center of attention?</p>
           <label><input type="radio" name="q6" value="flaunt"> Yes, like they say, “if you got it, flaunt it.”</label>
           <label><input type="radio" name="q6" value="partner shine"> Yes, but I prefer to let my partner shine</label>
           <label><input type="radio" name="q6" value="partner main"> No, I don’t want to be in the spotlight but I don’t mind if my partner wants to be the main character</label>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="question">
-          <p>7… Would you enjoy a threesome?</p>
+          <p>7. Would you enjoy a threesome?</p>
           <label><input type="radio" name="q7" value="no"> No I’d like my partner to be mine & only mine</label>
           <label><input type="radio" name="q7" value="maybe"> Maybe, I’d consider it</label>
           <label><input type="radio" name="q7" value="yeah"> Yeah it’d be fun</label>
@@ -71,13 +71,13 @@
         </div>
 
         <div class="question">
-          <p>8… Do you prefer to give pleasure or receive it?</p>
+          <p>8. Do you prefer to give pleasure or receive it?</p>
           <label><input type="radio" name="q8" value="give"> Give pleasure</label>
           <label><input type="radio" name="q8" value="receive"> Receive pleasure</label>
         </div>
 
         <div class="question">
-          <p>9… Who do you want to wear the pants?</p>
+          <p>9. Who do you want to wear the pants?</p>
           <label><input type="radio" name="q9" value="control"> I like to be in control</label>
           <label><input type="radio" name="q9" value="partner control"> I want my partner to take control</label>
           <label><input type="radio" name="q9" value="dom street"> I’m dominant in the streets & submissive in the sheets</label>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="question">
-          <p>10… Feeling frisky? Want to audition to be a star in our reality dating show? Once you’re in, you won’t want to pull out.</p>
+          <p>10. Feeling frisky? Want to audition to be a star in our reality dating show? Once you’re in, you won’t want to pull out.</p>
           <label><input type="radio" name="q10" value="yes"> Let’s do it! I’m ready for my close-up</label>
           <label><input type="radio" name="q10" value="pass"> Tempting, but I’ll pass this time</label>
         </div>
