--- a/Index.html
+++ b/Index.html
@@ -48,7 +48,7 @@
         </div>
 
         <div class="question">
-          <p>5. Are you looking for a sugar daddy/momma?</p>
+          <p>5. Are you looking for a sugar daddy/mama?</p>
           <label><input type="radio" name="q5" value="yes"> Yes</label>
           <label><input type="radio" name="q5" value="no"> No thank you</label>
           <label><input type="radio" name="q5" value="iam"> Are you kidding? I am the sugar daddy/momma!</label>
