--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,8 @@
         <div class="subtitle">
           10 questions<br>
           100% private<br>
-          1000X more <span class="scan-dalous">SCAN-DALOUS</span> than swiping
+          1000X more <span class="scan-dalous">SCAN-DALOUS</span> <br>
+          than swiping
         </div>
       </div>
 
