--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <div class="border-wrapper">
+    <div class="logo-wrapper center">
+      <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/main/golden%20Le%20Libido%20Logo%20copy.png" alt="Golden Le Libido Logo" class="logo-img">
+    </div>
     <div class="container">
       <div class="center">
         <div class="title">The 1st<br>In-Person<br>Dating App</div>
