--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="border-wrapper">
     <div class="logo-wrapper center">
-      <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/main/golden%20Le%20Libido%20Logo%20copy.png" alt="Golden Le Libido Logo" class="logo-img">
+      <img src="https://raw.githubusercontent.com/goldlibido/Questionnaire-/refs/heads/main/golden%20Le%20Libido%20Logo%20copy.png?token=GHSAT0AAAAAADEFJ27D75NKMXP6OBIW6JFI2BSKYWA" alt="Golden Le Libido Logo" class="logo-img">
     </div>
     <div class="container">
       <div class="center">
