--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,8 @@
         <div class="subtitle">
           10 questions<br>
           100% private<br>
-          1000X more <span class="scan-dalous">SCAN-DALOUS</span> <br>
+          1000X more <br>
+          <span class="scan-dalous">SCAN-DALOUS</span> <br>
           than swiping
         </div>
       </div>
