--- a/Result.html
+++ b/Result.html
@@ -50,15 +50,17 @@
 
     .green {
       background-color: #06954E;
+      text-shadow: 0 0 5px #88e788, 0 0 10px #88e788;
     }
 
     .blue {
       background-color: #064D95;
+      text-shadow: 0 0 5px #90d5ff, 0 0 10px #90df55;
     }
   </style>
 </head>
 <body id="resultBody">
-  <div class="title" id="resultText">Meet your type<br>in our<br>ROOM!</div>
+  <div class="title" id="resultText">Meet your type<br>in the<br>ROOM!</div>
   <div class="subtitle">
     Audition for our reality dating show by participating in our speed-dating game, <span id="pickupLine">The Pickup Line!</span>
   </div>
