--- a/Result.html
+++ b/Result.html
@@ -55,7 +55,7 @@
 
     .blue {
       background-color: #064D95;
-      text-shadow: 0 0 5px #90d5ff, 0 0 10px #90df55;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
     }
   </style>
 </head>
