--- a/Result.html
+++ b/Result.html
@@ -7,11 +7,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      color: white;
-      text-align: center;
-      padding: 50px 20px;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  text-align: center;
+  padding: 15vh 20px 50px;
+}
     }
 
     .title {
