--- a/Index.html
+++ b/Index.html
@@ -90,11 +90,14 @@
           <label><input type="radio" name="q9" value="switch"> I like to switch it up</label>
         </div>
 
-        <div class="question">
-          <p>10. Feeling frisky? Want to audition to be a star in our reality dating show? Once you’re in, you won’t want to pull out.</p>
-          <label><input type="radio" name="q10" value="yes"> Let’s do it! I’m ready for my close-up</label>
-          <label><input type="radio" name="q10" value="pass"> Tempting, but I’ll pass this time</label>
-        </div>
+       <div class="question">
+  <p>10. When the clothes come off, what kind of dirty talk makes you melt?</p>
+  <label><input type="radio" name="q10" value="praise"> Praise</label>
+  <label><input type="radio" name="q10" value="teasing"> Playful teasing</label>
+  <label><input type="radio" name="q10" value="degradation"> Degradation (we don’t judge, unless you’re into that)</label>
+  <label><input type="radio" name="q10" value="filthy"> The filthier, the better</label>
+  <label><input type="radio" name="q10" value="fifth"> I plead the fifth</label>
+</div>
 
         <div class="center">
           <button class="submit-btn" type="submit">Meet Your Type Now!</button>
